Bug 50487 - [Regression]clicking dnd flower leads to dnd segment fault
Summary: [Regression]clicking dnd flower leads to dnd segment fault
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-29 22:13 UTC by ZhaoShengyan
Modified: 2012-08-27 02:50 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Debug patch for dnd (491 bytes, patch)
2012-05-31 00:33 UTC, Ander Conselvan de Oliveira
Details | Splinter Review
dnd-strace (32.30 KB, text/plain)
2012-07-26 01:57 UTC, ZhaoShengyan
Details

Description ZhaoShengyan 2012-05-29 22:13:52 UTC
System Environment:
--------------------------
Arch:    i386
Libdrm:  (master)2.4.34-2-g481234f2909c0506962a2f42da862da6a9b13fd8
Wayland: (master)d422a733b4c20a65748c8d9e811f672a2d744218
Mesa:    (master)6404095fbab74a6194081374bd56786d07c5d561
Xserver: (master) xorg-server-1.12.0-193-g594b4a4f0601066d09e49a84c5af8c2eb6f07240
Xf86_video_intel: (master) 2.19.0-110-g55e6f5f220401318529e81f7c96fe0af3b893a0c
Cairo:   (master)dbc0efad7e565558a3abf7f69d7675efddc4688d
Cairo_gl:(master) f3ae8302072dbcee38be4e0a9397e5aaa4084ecf
Xkbcommon:(master) 8ca8f05aab86423c2495cd917489becfecca4632
Weston:   (master) 92a57db6f2fb54d70e5da00aaabc6af752ee07a2
Kernel_unstable: (drm-intel-next-queued) eeafaaca763408c099d2ade3a69e0716f296a97b

Bug detailed description:
-----------------------------
Run case dnd, choose a flower above client window and click it, dnd will exit with log: Segmentation fault (core dumped). 
The issue can be reproduced both under drm and X mode.


Reproduce steps:
----------------------------
1. Start weston
2. ./dnd
3. choose a flower and click it.
Comment 1 ZhaoShengyan 2012-05-29 22:55:30 UTC
(gdb) bt
#0  create_drag_cursor (dnd_drag=0x80be528, item=0x805f3c0, x=<optimized out>, y=146, opacity=1) at dnd.c:324
#1  0x0804bfa8 in dnd_button_handler (widget=0x80c72c8, input=0x805d160, time=2622325723, button=272, state=1, data=0x8062a50) at dnd.c:418
#2  0x0804eb49 in pointer_handle_button (data=0x805d160, pointer=0x80a97e0, serial=127, time=2622325723, button=272, state=1) at window.c:1793
#3  0x46a89447 in ffi_call_SYSV () from /usr/lib/libffi.so.5
#4  0x46a891c0 in ffi_call () from /usr/lib/libffi.so.5
#5  0xb7fc8443 in wl_closure_invoke (closure=0xbfffed9c, target=0x80a97e0, func=0x804eae0 <pointer_handle_button>, data=0x805d160) at connection.c:770
#6  0xb7fc6320 in handle_event (display=0x8058510, id=<optimized out>, opcode=3, size=24) at wayland-client.c:494
#7  0xb7fc6e31 in wl_display_iterate (display=0x8058510, mask=<optimized out>) at wayland-client.c:527
#8  0x08050c34 in display_run (display=0x8058458) at window.c:3512
#9  0x0804b1a8 in main (argc=1, argv=0xbffff494) at dnd.c:576
Comment 2 ZhaoShengyan 2012-05-29 23:40:45 UTC
We had tried to bisect the first bad commit, but the recent "weston can't be built" bug blocks us.
So sorry for no providing the first bad commit ID.
Comment 3 Ander Conselvan de Oliveira 2012-05-30 00:26:56 UTC
From the backtrace I would guess you don't have a grabbing cursor in your cursor theme. Please check if you have a file named something like

    /usr/share/icons/[cursor theme name]/cursors/grabbing
Comment 4 Kristian Høgsberg 2012-05-30 10:01:54 UTC
(In reply to comment #2)
> We had tried to bisect the first bad commit, but the recent "weston can't be
> built" bug blocks us.
> So sorry for no providing the first bad commit ID.

Which bug is that?  I'll try to search for it and find it now, but it's a lot easier if you can just put the bug number in the comment here in the future.
Comment 5 ZhaoShengyan 2012-05-30 18:31:36 UTC
(In reply to comment #4)
> (In reply to comment #2)
> > We had tried to bisect the first bad commit, but the recent "weston can't be
> > built" bug blocks us.
> > So sorry for no providing the first bad commit ID.
> Which bug is that?  I'll try to search for it and find it now, but it's a lot
> easier if you can just put the bug number in the comment here in the future.

The bug number is Bug 50330:[Regression]Weston can't be build successfully.
Really thanks for your good suggestion, I'll take that soon.
Comment 6 ZhaoShengyan 2012-05-30 18:46:35 UTC
(In reply to comment #3)
> From the backtrace I would guess you don't have a grabbing cursor in your
> cursor theme. Please check if you have a file named something like
>     /usr/share/icons/[cursor theme name]/cursors/grabbing

I can find that file, which locates at:
/usr/share/icons/Adwaita/cursors/grabbing
Comment 7 Ander Conselvan de Oliveira 2012-05-31 00:33:31 UTC
Created attachment 62314 [details] [review]
Debug patch for dnd

Just to make sure, can you run dnd with this patch and paste its output here?
Comment 8 ZhaoShengyan 2012-05-31 01:05:39 UTC
(In reply to comment #7)
> Created attachment 62314 [details] [review] [review]
> Debug patch for dnd
> Just to make sure, can you run dnd with this patch and paste its output here?

The output is:
create_drag_cursor: pointer = (nil)
Segmentation fault (core dumped)
Comment 9 ZhaoShengyan 2012-07-19 01:47:58 UTC
Is there any update regard to this issue?
Comment 10 Kristian Høgsberg 2012-07-20 15:40:14 UTC
(In reply to comment #9)
> Is there any update regard to this issue?

Still can't reproduce it here.  Can you run dnd under strace -e open and attach the output?  For example,

  $ strace -o dnd-strace -e open ./clients/dnd

and attach dnd-strace here.
Comment 11 ZhaoShengyan 2012-07-26 01:57:14 UTC
Created attachment 64695 [details]
dnd-strace

This info is captured during I the dnd segment fault happened.
Comment 12 ZhaoShengyan 2012-07-26 01:59:04 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > Is there any update regard to this issue?
> Still can't reproduce it here.  Can you run dnd under strace -e open and attach
> the output?  For example,
>   $ strace -o dnd-strace -e open ./clients/dnd
> and attach dnd-strace here.

Sorry for reply you so late, I hope the attachment is helpful for you.
Comment 13 Kristian Høgsberg 2012-08-13 18:38:18 UTC
Crash should be fixed in 2e615e7a033ee7eb50f3b9ffc3ab2fddeb2b3494, but we're still missing the cursor.
Comment 14 Kristian Høgsberg 2012-08-13 18:39:24 UTC
Erhm, make that f22d0ecd97644e7b6526128c3449f0e080188b26.
Comment 15 Vova 2012-08-13 19:57:24 UTC
I sent a patch about a month ago that fixes this bug. But no received response, today I saw a patch in commit f22d0ecd97644e7b6526128c3449f0e080188b26 similar by my patch. Developers don`t read mails? Don`t understand... Where to send patches that-would you read them? %) The mesa project - the same situation.
Comment 16 ZhaoShengyan 2012-08-27 02:49:25 UTC
The bug has been closed at Weston:86adef9d54d41b1594749c00abab24482248fa5c.
Marked this as Resolved and Fixed.
Comment 17 ZhaoShengyan 2012-08-27 02:50:08 UTC
Marked this as Verified and Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.